try to fix CI server from running out of PermGen